# tcmirs

./: .gitignore  README.md  pyproject.toml
tcmirs/: __init__.py  cli.py  config.py  ibtracs.py  mirs.py  output.py
